--- a/implementations/express-graphql/package.json
+++ b/implementations/express-graphql/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "express-graphql",
   "packageManager": "yarn@3.2.3",
+  "main": "index.mjs",
   "dependencies": {
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
