--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install
         run: yarn install --immutable
       - name: Build
-        run: yarn build
+        run: yarn build:esm
       - name: Start
         run: node implementations/express-graphql &
       - name: Audit
