chore(esm-post-process): import extensions for files only, .d.ts support and cleanup

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "lint": "eslint 'src'",
     "type-check": "tsc --noEmit",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "build:esm": "tsc -b tsconfig.esm.json && node scripts/esm-post-process.js",
+    "build:esm": "tsc -b tsconfig.esm.json && node scripts/esm-post-process.mjs",
     "build:cjs": "tsc -b tsconfig.cjs.json",
     "build:umd": "rollup -c && gzip umd/graphql-http.min.js -c > umd/graphql-http.min.js.gz",
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
@@ -87,7 +87,6 @@
     "jest-jasmine2": "^29.0.1",
     "node-fetch": "^3.2.10",
     "prettier": "^2.7.1",
-    "replacestream": "^4.0.3",
     "rollup": "^2.79.0",
     "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^19.0.5",
