--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
     "release": "semantic-release"
   },
+  "workspaces": [
+    "implementations/*"
+  ],
   "peerDependencies": {
     "graphql": ">=0.11 <=16"
   },
