--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -33,11 +33,11 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/express-graphql/README.md
       - name: Commit
         run: |
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -am "docs(express-graphql): audit report [skip ci]"
-          git push
+          git push origin ${{ github.ref_name }}
 
   apollo-server:
     runs-on: ubuntu-latest
@@ -62,11 +62,11 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/apollo-server/README.md
       - name: Commit
         run: |
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -am "docs(apollo-server): audit report [skip ci]"
-          git push
+          git push origin ${{ github.ref_name }}
 
   mercurius:
     runs-on: ubuntu-latest
@@ -91,11 +91,11 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/mercurius/README.md
       - name: Commit
         run: |
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -am "docs(mercurius): audit report [skip ci]"
-          git push
+          git push origin ${{ github.ref_name }}
 
   graphql-yoga:
     runs-on: ubuntu-latest
@@ -120,11 +120,11 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/graphql-yoga/README.md
       - name: Commit
         run: |
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -am "docs(graphql-yoga): audit report [skip ci]"
-          git push
+          git push origin ${{ github.ref_name }}
 
   graphql-helix:
     runs-on: ubuntu-latest
@@ -149,8 +149,8 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/graphql-helix/README.md
       - name: Commit
         run: |
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "docs(graphql-helix): audit report [skip ci]"
-          git push
+          git push origin ${{ github.ref_name }}
