--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -17,7 +17,7 @@ jobs:
       PORT: 4000
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -33,11 +33,11 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/express-graphql/README.md
       - name: Commit
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -am "docs(express-graphql): audit report [skip ci]"
-          git push origin ${{ github.ref_name }}
+          git push
 
   apollo-server:
     runs-on: ubuntu-latest
@@ -46,7 +46,7 @@ jobs:
       PORT: 4000
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -62,11 +62,11 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/apollo-server/README.md
       - name: Commit
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -am "docs(apollo-server): audit report [skip ci]"
-          git push origin ${{ github.ref_name }}
+          git push
 
   mercurius:
     runs-on: ubuntu-latest
@@ -75,7 +75,7 @@ jobs:
       PORT: 4000
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -91,11 +91,11 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/mercurius/README.md
       - name: Commit
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -am "docs(mercurius): audit report [skip ci]"
-          git push origin ${{ github.ref_name }}
+          git push
 
   graphql-yoga:
     runs-on: ubuntu-latest
@@ -104,7 +104,7 @@ jobs:
       PORT: 4000
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -120,11 +120,11 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/graphql-yoga/README.md
       - name: Commit
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -am "docs(graphql-yoga): audit report [skip ci]"
-          git push origin ${{ github.ref_name }}
+          git push
 
   graphql-helix:
     runs-on: ubuntu-latest
@@ -133,7 +133,7 @@ jobs:
       PORT: 4000
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -149,8 +149,8 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/graphql-helix/README.md
       - name: Commit
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -m "docs(graphql-helix): audit report [skip ci]"
-          git push origin ${{ github.ref_name }}
+          git push
