--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -36,7 +36,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -am "docs(express-graphql): audit report [skip ci]"
+          git commit -m "docs(express-graphql): audit report [skip ci]"
           git push
 
   apollo-server:
@@ -65,7 +65,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -am "docs(apollo-server): audit report [skip ci]"
+          git commit -m "docs(apollo-server): audit report [skip ci]"
           git push
 
   mercurius:
@@ -94,7 +94,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -am "docs(mercurius): audit report [skip ci]"
+          git commit -m "docs(mercurius): audit report [skip ci]"
           git push
 
   graphql-yoga:
@@ -123,7 +123,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -am "docs(graphql-yoga): audit report [skip ci]"
+          git commit -m "docs(graphql-yoga): audit report [skip ci]"
           git push
 
   graphql-helix:
