--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -47,6 +49,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -76,6 +80,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -105,6 +111,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
       - name: Set up node
         uses: actions/setup-node@v2
         with:
@@ -134,6 +142,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
       - name: Set up node
         uses: actions/setup-node@v2
         with:
