--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -35,8 +35,8 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/express-graphql/README.md
       - name: Commit
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "docs(express-graphql): audit report [skip ci]"
           git push
@@ -66,8 +66,8 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/apollo-server/README.md
       - name: Commit
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "docs(apollo-server): audit report [skip ci]"
           git push
@@ -97,8 +97,8 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/mercurius/README.md
       - name: Commit
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "docs(mercurius): audit report [skip ci]"
           git push
@@ -128,8 +128,8 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/graphql-yoga/README.md
       - name: Commit
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "docs(graphql-yoga): audit report [skip ci]"
           git push
@@ -159,8 +159,8 @@ jobs:
         run: node scripts/audit-implementation.mjs implementations/graphql-helix/README.md
       - name: Commit
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "docs(graphql-helix): audit report [skip ci]"
           git push
