--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -30,12 +30,12 @@ jobs:
       - name: Start
         run: node implementations/express-graphql &
       - name: Audit
-        run: node scripts/audit-implementation.mjs implementations/express-graphql/README.md
+        run: node scripts/audit-implementation.mjs report.md
       - name: Upload report
         uses: actions/upload-artifact@v3
         with:
           name: express-graphql-report
-          path: implementations/express-graphql/README.md
+          path: report.md
 
   apollo-server:
     runs-on: ubuntu-latest
@@ -57,12 +57,12 @@ jobs:
       - name: Start
         run: node implementations/apollo-server &
       - name: Audit
-        run: node scripts/audit-implementation.mjs implementations/apollo-server/README.md
+        run: node scripts/audit-implementation.mjs report.md
       - name: Upload report
         uses: actions/upload-artifact@v3
         with:
           name: apollo-server-report
-          path: implementations/apollo-server/README.md
+          path: report.md
 
   mercurius:
     runs-on: ubuntu-latest
@@ -84,12 +84,12 @@ jobs:
       - name: Start
         run: node implementations/mercurius &
       - name: Audit
-        run: node scripts/audit-implementation.mjs implementations/mercurius/README.md
+        run: node scripts/audit-implementation.mjs report.md
       - name: Upload report
         uses: actions/upload-artifact@v3
         with:
           name: mercurius-report
-          path: implementations/mercurius/README.md
+          path: report.md
 
   graphql-yoga:
     runs-on: ubuntu-latest
@@ -111,12 +111,12 @@ jobs:
       - name: Start
         run: node implementations/graphql-yoga &
       - name: Audit
-        run: node scripts/audit-implementation.mjs implementations/graphql-yoga/README.md
+        run: node scripts/audit-implementation.mjs report.md
       - name: Upload report
         uses: actions/upload-artifact@v3
         with:
           name: graphql-yoga-report
-          path: implementations/graphql-yoga/README.md
+          path: report.md
 
   graphql-helix:
     runs-on: ubuntu-latest
@@ -138,12 +138,12 @@ jobs:
       - name: Start
         run: node implementations/graphql-helix &
       - name: Audit
-        run: node scripts/audit-implementation.mjs implementations/graphql-helix/README.md
+        run: node scripts/audit-implementation.mjs report.md
       - name: Upload report
         uses: actions/upload-artifact@v3
         with:
           name: graphql-helix-report
-          path: implementations/graphql-helix/README.md
+          path: report.md
 
   report:
     name: Report
@@ -160,22 +160,27 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: express-graphql-report
+          path: implementations/express-graphql/README.md
       - name: Download apollo-server report
         uses: actions/download-artifact@v3
         with:
           name: apollo-server-report
+          path: implementations/apollo-server/README.md
       - name: Download mercurius report
         uses: actions/download-artifact@v3
         with:
           name: mercurius-report
+          path: implementations/mercurius/README.md
       - name: Download graphql-yoga report
         uses: actions/download-artifact@v3
         with:
           name: graphql-yoga-report
+          path: implementations/graphql-yoga/README.md
       - name: Download graphql-helix report
         uses: actions/download-artifact@v3
         with:
           name: graphql-helix-report
+          path: implementations/graphql-helix/README.md
       - name: Commit
         run: |
           git config user.name "github-actions[bot]"
