--- a/implementations/apollo-server/package.json
+++ b/implementations/apollo-server/package.json
@@ -3,6 +3,9 @@
   "name": "apollo-server",
   "packageManager": "yarn@3.2.3",
   "main": "index.mjs",
+  "scripts": {
+    "start": "node ."
+  },
   "dependencies": {
     "apollo-server": "^3.10.2",
     "graphql": "^16.6.0"
