--- a/implementations/graphql-helix/package.json
+++ b/implementations/graphql-helix/package.json
@@ -3,6 +3,9 @@
   "name": "graphql-helix",
   "packageManager": "yarn@3.2.3",
   "main": "index.mjs",
+  "scripts": {
+    "start": "node ."
+  },
   "dependencies": {
     "express": "^4.18.1",
     "graphql": "^16.6.0",
