--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -145,6 +145,33 @@ jobs:
           name: graphql-helix-report
           path: README.md
 
+  graph-client:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    env:
+      PORT: 4000
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+          cache: 'yarn'
+      - name: Install
+        run: yarn install --immutable
+      - name: Build
+        run: yarn build:esm
+      - name: Start
+        run: yarn workspace graph-client start &
+      - name: Audit
+        run: node scripts/audit-implementation.mjs README.md
+      - name: Upload report
+        uses: actions/upload-artifact@v3
+        with:
+          name: graph-client-report
+          path: README.md
+
   report:
     name: Report
     runs-on: ubuntu-latest
@@ -181,6 +208,11 @@ jobs:
         with:
           name: graphql-helix-report
           path: implementations/graphql-helix
+      - name: Download graph-client report
+        uses: actions/download-artifact@v3
+        with:
+          name: graph-client-report
+          path: implementations/graph-client
       - name: Commit
         run: |
           git config user.name "github-actions[bot]"
