--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -177,7 +177,14 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     needs:
-      [express-graphql, apollo-server, mercurius, graphql-yoga, graphql-helix]
+      [
+        express-graphql,
+        apollo-server,
+        mercurius,
+        graphql-yoga,
+        graphql-helix,
+        graph-client,
+      ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
