--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -172,6 +172,31 @@ jobs:
           name: graph-client-report
           path: README.md
 
+  thegraph:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    env:
+      URL: https://api.thegraph.com/subgraphs/name/sushiswap/exchange/graphql
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+          cache: 'yarn'
+      - name: Install
+        run: yarn install --immutable
+      - name: Build
+        run: yarn build:esm
+      - name: Audit
+        run: node scripts/audit-implementation.mjs README.md
+      - name: Upload report
+        uses: actions/upload-artifact@v3
+        with:
+          name: thegraph-report
+          path: README.md
+
   report:
     name: Report
     runs-on: ubuntu-latest
@@ -184,6 +209,7 @@ jobs:
         graphql-yoga,
         graphql-helix,
         graph-client,
+        thegraph,
       ]
     steps:
       - name: Checkout
@@ -220,6 +246,11 @@ jobs:
         with:
           name: graph-client-report
           path: implementations/graph-client
+      - name: Download thegraph report
+        uses: actions/download-artifact@v3
+        with:
+          name: thegraph-report
+          path: implementations/thegraph
       - name: Commit
         run: |
           git config user.name "github-actions[bot]"
