--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/jest": "^29.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@whatwg-node/fetch": "^0.5.1",
     "babel-jest": "^29.0.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
