--- a/package.json
+++ b/package.json
@@ -35,6 +35,26 @@
       "types": "./lib/index.d.ts",
       "browser": "./umd/graphql-http.js"
     },
+    "./lib/use/fetch": {
+      "types": "./lib/use/fetch.d.ts",
+      "require": "./lib/use/fetch.js",
+      "import": "./lib/use/fetch.mjs"
+    },
+    "./lib/use/node": {
+      "types": "./lib/use/node.d.ts",
+      "require": "./lib/use/node.js",
+      "import": "./lib/use/node.mjs"
+    },
+    "./lib/use/express": {
+      "types": "./lib/use/express.d.ts",
+      "require": "./lib/use/express.js",
+      "import": "./lib/use/express.mjs"
+    },
+    "./lib/use/fastify": {
+      "types": "./lib/use/fastify.d.ts",
+      "require": "./lib/use/fastify.js",
+      "import": "./lib/use/fastify.mjs"
+    },
     "./package.json": "./package.json"
   },
   "types": "lib/index.d.ts",
@@ -78,13 +98,17 @@
     "@rollup/plugin-typescript": "^8.4.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@whatwg-node/fetch": "^0.5.1",
     "babel-jest": "^29.0.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.18.2",
+    "fastify": "^4.9.2",
     "graphql": "^16.6.0",
     "jest": "^29.0.1",
     "jest-jasmine2": "^29.0.1",
