--- a/implementations/graphql-yoga/package.json
+++ b/implementations/graphql-yoga/package.json
@@ -8,6 +8,6 @@
   },
   "dependencies": {
     "graphql": "^16.6.0",
-    "graphql-yoga": "3.0.0-alpha-20220906160826-20e2c681"
+    "graphql-yoga": "3.0.0-next.10"
   }
 }
