check running graphql on fail

--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -226,6 +226,9 @@ jobs:
         with:
           name: hotchocolate-report
           path: README.md
+      - name: Check running Docker containers
+        if: fail()
+        run: docker ps -a
 
   report:
     name: Report
