--- a/implementations/hotchocolate/docker-compose.yml
+++ b/implementations/hotchocolate/docker-compose.yml
@@ -8,6 +8,6 @@ services:
       - ${PORT}:${PORT}
     entrypoint: dotnet run
     healthcheck:
-      test: "curl -f http://localhost:$$PORT/graphql?query=%7B__typename%7D || exit 1"
+      test: curl -f http://localhost:$$PORT/graphql?query=%7B__typename%7D || exit 1
       interval: 3s
       timeout: 1s
