--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -197,6 +197,34 @@ jobs:
           name: thegraph-report
           path: README.md
 
+  hotchocolate:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    env:
+      PORT: 4000
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: yarn
+      - name: Install
+        run: yarn install --immutable
+      - name: Build
+        run: yarn build:esm
+      - name: Start
+        run: yarn workspace hotchocolate start -d --wait
+      # TODO: cache docker build artifacts
+      - name: Audit
+        run: node scripts/audit-implementation.mjs README.md
+      - name: Upload report
+        uses: actions/upload-artifact@v3
+        with:
+          name: hotchocolate-report
+          path: README.md
+
   report:
     name: Report
     runs-on: ubuntu-latest
@@ -210,6 +238,7 @@ jobs:
         graphql-helix,
         graph-client,
         thegraph,
+        hotchocolate,
       ]
     steps:
       - name: Checkout
@@ -251,6 +280,11 @@ jobs:
         with:
           name: thegraph-report
           path: implementations/thegraph
+      - name: Download hotchocolate report
+        uses: actions/download-artifact@v3
+        with:
+          name: hotchocolate-report
+          path: implementations/hotchocolate
       - name: Commit
         run: |
           git config user.name "github-actions[bot]"
