--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -273,7 +273,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha || github.ref_name }}
+          ref: ${{ format('{0}/{1}', github.event.pull_request.head.repo.full_name, github.event.pull_request.head.ref) || github.ref_name }}
       - name: Download express-graphql report
         uses: actions/download-artifact@v3
         with:
