--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build:esm": "tsc -b tsconfig.esm.json && node scripts/esm-post-process.mjs",
     "build:cjs": "tsc -b tsconfig.cjs.json",
-    "build:umd": "rollup -c && gzip umd/graphql-http.min.js -c > umd/graphql-http.min.js.gz",
+    "build:umd": "rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript && gzip umd/graphql-http.min.js -c > umd/graphql-http.min.js.gz",
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
     "release": "semantic-release"
   },
@@ -95,10 +95,13 @@
     "@babel/plugin-proposal-optional-chaining": "^7.18.9",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-terser": "^0.2.1",
     "@rollup/plugin-typescript": "^9.0.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "@types/eslint": "^8.4.10",
     "@types/express": "^4.17.14",
+    "@types/glob": "^8.0.0",
     "@types/jest": "^29.2.2",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
@@ -115,7 +118,6 @@
     "node-fetch": "^3.2.10",
     "prettier": "^2.7.1",
     "rollup": "^3.2.5",
-    "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^19.0.5",
     "tslib": "^2.4.1",
     "typedoc": "^0.23.20",
