--- a/implementations/postgraphile/docker-compose.yml
+++ b/implementations/postgraphile/docker-compose.yml
@@ -20,6 +20,6 @@ services:
       - ${PORT}:${PORT}
     entrypoint: postgraphile --host 0.0.0.0 --port ${PORT}
     healthcheck:
-      test: "curl -f -H 'content-type: application/json' -d '{ \"query\": \"{ __typename }\" }' http://localhost:$$PORT/graphql || exit 1"
+      test: 'curl -f -H "content-type: application/json" -d ''{ "query": "{ __typename }" }'' http://localhost:$$PORT/graphql || exit 1'
       interval: 3s
       timeout: 1s
