--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
   },
   "scripts": {
     "gendocs": "typedoc --options typedoc.js src/",
-    "lint": "eslint 'src'",
+    "lint:eslint": "eslint 'src'",
+    "lint:prettier": "prettier -c .",
+    "lint": "yarn lint:eslint && yarn lint:prettier",
     "type-check": "tsc --noEmit",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build:esm": "tsc -b tsconfig.esm.json && node scripts/esm-post-process.mjs",
@@ -109,7 +111,6 @@
     "babel-jest": "^29.3.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "fastify": "^4.9.2",
     "graphql": "^16.6.0",
