--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -252,6 +252,33 @@ jobs:
         with:
           name: postgraphile-report
           path: README.md
+  pioneer:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    env:
+      PORT: 4000
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: yarn
+      - name: Install
+        run: yarn install --immutable
+      - name: Build
+        run: yarn build:esm
+      - name: Start
+        run: yarn workspace pioneer start -d --wait
+      # TODO: cache docker build artifacts
+      - name: Audit
+        run: node scripts/audit-implementation.mjs README.md
+      - name: Upload report
+        uses: actions/upload-artifact@v3
+        with:
+          name: pioneer-report
+          path: README.md
 
   report:
     name: Report
@@ -268,6 +295,7 @@ jobs:
         thegraph,
         hotchocolate,
         postgraphile,
+        pioneer,
       ]
     steps:
       - name: Checkout
@@ -320,6 +348,11 @@ jobs:
         with:
           name: postgraphile-report
           path: implementations/postgraphile
+      - name: Download pioneer report
+        uses: actions/download-artifact@v3
+        with:
+          name: pioneer-report
+          path: implementations/pioneer
       - name: Commit
         run: |
           git config user.name "github-actions[bot]"
