--- a/implementations/pioneer/docker-compose.yml
+++ b/implementations/pioneer/docker-compose.yml
@@ -2,12 +2,12 @@ services:
   server:
     build: .
     environment:
-      - HOST=0.0.0.0
       - PORT=${PORT}
     ports:
       - ${PORT}:${PORT}
-    entrypoint: swift run
+    entrypoint: .build/release/audit
     healthcheck:
       test: curl -f http://localhost:$$PORT/graphql?query=%7B__typename%7D || exit 1
+      start_period: 2s
       interval: 3s
       timeout: 1s
