--- a/implementations/pioneer/package.json
+++ b/implementations/pioneer/package.json
@@ -3,6 +3,6 @@
   "name": "pioneer",
   "packageManager": "yarn@3.2.3",
   "scripts": {
-    "start": "PORT=${PORT} docker compose up --build"
+    "start": "docker compose up --build"
   }
 }
